--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/css/stylesheet.css">
+    <link rel="stylesheet" href="web/css/stylesheet.css">
     <title>The Haukai Resturant</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
