--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -23,7 +23,7 @@
 
     <div class="navigation" id="mynavigation">
     
-      <a href="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/Haukai.html"><img src="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
+      <a href="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/Haukai.html"><img src="web/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
       
       <a href="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/Menu.html">Menu</a>
       <a href="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/Bookings.html">Bookings</a>
