--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -25,9 +25,9 @@
     
       <a href="web/index.html"><img src="web/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
       
-      <a href="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/Menu.html">Menu</a>
-      <a href="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/Bookings.html">Bookings</a>
-     <a href="file:///C:/Users/britn/OneDrive/Documents/open%20polytechnic/Bit607_A3_5001347/web/contact.html">About us</a>
+      <a href="web/Menu.html">Menu</a>
+      <a href="web/Bookings.html">Bookings</a>
+     <a href="web/contact.html">About us</a>
       <a href="#">Staff</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
