--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -23,7 +23,7 @@
 
     <div class="navigation" id="mynavigation">
     
-      <a href="web/index.html"><img src="web/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
+      <a href="https://github.com/Britney0843/huakai-assignment-/blob/main/web/index.html"><img src="web/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
       
       <a href="web/Menu.html">Menu</a>
       <a href="web/Bookings.html">Bookings</a>
