--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -26,8 +26,8 @@
       <a href="https://github.com/Britney0843/huakai-assignment-/blob/main/web/index.html"><img src="web/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
       
       <a href="web/Menu.html">Menu</a>
-      <a href="web/Bookings.html">Bookings</a>
-     <a href="web/contact.html">About us</a>
+      <a href="https://github.com/Britney0843/huakai-assignment-/blob/main/web/Bookings.html">Bookings</a>
+     <a href="https://github.com/Britney0843/huakai-assignment-/blob/main/web/contact.html">About us</a>
       <a href="#">Staff</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
