--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://github.com/Britney0843/huakai-assignment-/blob/main/web/css/stylesheet.css">
+    <link rel="stylesheet" href="web/private/css/stylesheet.css">
     <title>The Haukai Resturant</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -23,7 +23,7 @@
 
     <div class="navigation" id="mynavigation">
     
-      <a href="web/index.html"><img src="web/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
+      <a href="web/index.html"><img src="web/private/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
       
       <a href="web/Menu.html">Menu</a>
       <a href="https://github.com/Britney0843/huakai-assignment-/blob/main/web/Bookings.html">Bookings</a>
