--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -23,11 +23,11 @@
 
     <div class="navigation" id="mynavigation">
     
-      <a href="web/index.html"><img src="web/private/image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
+      <a href="../index.html"><img src="../image/logo.png"  alt="The Haukai Resturant"  width = "10%" ></a>
       
-      <a href="web/Menu.html">Menu</a>
-      <a href="https://github.com/Britney0843/huakai-assignment-/blob/main/web/Bookings.html">Bookings</a>
-     <a href="https://github.com/Britney0843/huakai-assignment-/blob/main/web/contact.html">About us</a>
+      <a href="../Menu.html">Menu</a>
+      <a href="../Bookings.html">Bookings</a>
+     <a href="../contact.html">About us</a>
       <a href="#">Staff</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
@@ -44,7 +44,7 @@
     </div>
     <div class="paragraphtext">
       <p>
-        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Pacific%2FAuckland&src=ODZ0Nms5cm44cm5lbHN0ZGQxb2hrZnJndjhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23F4511E" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Pacific%2FAuckland&src=ODZ0Nms5cm44cm5lbHN0ZGQxb2hrZnJndjhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23F4511E" style="border:solid 1px #777" width="80%" height="600" frameborder="0" scrolling="no"></iframe>
     </p ></div>
 
 
