--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -66,7 +66,7 @@
 
 <div class="footer">
   <p style="margin-left: 100px;"> &copy; The Haukai Resturant</p>
-  <p style="margin-left: 100px;"><a href="contact.html" style="color:white">Privacy Statement</a></p>
+  <p style="margin-left: 100px;"><a href="../contact.html" style="color:white">Privacy Statement</a></p>
   </div>
 
 </body>
